# CWeb3

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt  CmakeLists.txt  basic_webserver.c  custom_webserver.c  hashtest.c  index.html  note.md  webserver.c
examples/include/: response.h  soc.h
include/: CWEB3Http.h  config.h  hashtable.h  http.h  request.h  response.h  routes.h  server.h  soc.h  socketServer.h
src/: hashtable.c  http.c  linSoc.c  routes.c  server.c  socketServer.c  uniSoc.c  winSoc.c
